--- a/app/src/main/res/layout/connect4.xml
+++ b/app/src/main/res/layout/connect4.xml
@@ -11,7 +11,7 @@
         android:layout_height="0dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:background="#CB0037FF"
+        android:background="#00990099"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="7:6"
         android:columnCount="7"
@@ -20,14 +20,16 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_columnWeight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:text="fjn"
-            app:layout_constraintCircleRadius="50dp" />
+            android:layout_columnWeight="1"
+            android:background="#99009999"
+            android:backgroundTint="@null"
+            app:backgroundTint="@null"
+            android:colorControlHighlight="@android:color/transparent"
+            android:rippleColor="@android:color/transparent"/>
+
     </GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
