--- a/app/src/main/res/layout/gamespage.xml
+++ b/app/src/main/res/layout/gamespage.xml
@@ -33,8 +33,16 @@
             android:src="@drawable/connect4logo" />
 
         <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_rowWeight="1"
-            android:layout_columnWeight="1" />
+            android:layout_columnWeight="1"
+            android:background="#BB00BB55"
+            android:backgroundTint="@null"
+            app:backgroundTint="@null"
+            android:colorControlHighlight="@android:color/transparent"
+            android:rippleColor="@android:color/transparent"/>
+
 
         <Button
             android:layout_rowWeight="1"
